--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,4 @@
-@import "/styles/hero/hero.scss";
-@import "/styles/main-body/main-body.scss";
-@import "/styles/footer/footer.scss"
+@import "common/common.scss";
+@import "hero/hero.scss";
+@import "main-body/main-body.scss";
+@import "footer/footer.scss";
