--- a/styles/main-body/main-body.css
+++ b/styles/main-body/main-body.css
@@ -1,1 +1,53 @@
-/*# sourceMappingURL=main-body.css.map */
+.main {
+  display: flex;
+  width: 100%;
+  background-color: #d9d9d9;
+  margin-top: -5px;
+  justify-content: center;
+}
+.main .wrap-around {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  border-radius: 10px;
+  margin-top: -65px;
+  z-index: 1;
+  width: 95%;
+}
+.main .wrap-around .what-we-stand-for {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 150px;
+}
+.main .wrap-around .what-we-stand-for .stand-for-header {
+  text-align: center;
+  padding-top: 2.5%;
+}
+.main .wrap-around .what-we-stand-for .stand-for-header h1 {
+  font-size: 45px;
+  color: #3c4858;
+  padding: 1% 0 5% 0;
+}
+.main .wrap-around .what-we-stand-for .stand-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
+  margin: 1% 10%;
+}
+.main .wrap-around .what-we-stand-for .stand-row div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main .wrap-around .what-we-stand-for .stand-row img {
+  height: 60px;
+  width: 60px;
+}
+.main .wrap-around .about {
+  display: flex;
+  flex-direction: row;
+  padding: 0 150px;
+}/*# sourceMappingURL=main-body.css.map */
