--- a/styles/main-body/main-body.scss
+++ b/styles/main-body/main-body.scss
@@ -56,6 +56,106 @@
       display: flex;
       flex-direction: row;
       padding: 0 150px;
+      justify-content: space-evenly;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)), url(https://wp-themes.com/wp-content/themes/hestia/assets/img/contact.jpg);
+      padding: 3% 0 3% 0;
+
+      .about-context {
+        display: flex;
+        flex-direction: column;
+        margin: 0 0 0 10%;
+
+        .about-header {
+          margin-right: 5%;
+          color: #ffffff;
+        }
+
+        .about-paragraph {
+          color: #ffffff;
+        }
+      }
+
+      .about-images {
+        img {
+          max-width: 90%;
+        }
+      }
+    }
+
+    .blog {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 10%;
+      padding: 65px 0 70px 0;
+
+      .blog-header {
+        text-align: center;
+        font-size: 37px;
+      }
+
+      .blog-posts {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        // flex-direction: row;
+        justify-items: center;
+
+        div {
+          display: flex;
+          flex-direction: column;
+          margin: 2.5%;
+          padding: 15px 15px;
+
+          h6 {
+            margin: 10 0;
+          }
+        }
+      }
+    }
+
+    .contact-banner {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3)), url(https://wp-themes.com/wp-content/themes/hestia/assets/img/contact.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 70px 0;
+
+      .banner-card {
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+      
+        @mixin home-contact-format {
+          & h2 {
+            font-size: 37px;
+            color: #ffffff;
+          }
+          
+          & i {
+            font-size: 36.4px;
+            color: #ffffff;
+          }
+  
+          & h4 {
+            font-size: 18px;
+            color: #ffffff;
+          }
+  
+          & p {
+            font-size: 18px;
+            margin-left: 33px;
+            color: #c6c6c6
+          }
+        }
+  
+
+        .title, .contact-desc, .contact-phone {
+          @include home-contact-format;
+        }
+      }
     }
   }
 }
