--- a/styles/hero/hero.scss
+++ b/styles/hero/hero.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: #d9d9d9;
 
   .navbar {
     display: flex;
@@ -28,7 +29,7 @@
 
   .hero-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
 
     .background-image {
@@ -60,12 +61,47 @@
       }
     }
 
+
     .hestia-content {
       display: flex;
-      align-items: center;
       flex-direction: column;
+      align-items: center;
       position: absolute;
       margin: 20% 0 0 40%;
+    }
+    
+    .hero-title {
+      display: flex;
+      justify-content: center;
+      padding: 80px;
+      color: #ffffff;
+      background-color: #cf2e78;
+      
+      & h1 {
+        display: flex;
+        align-content: center;
+        flex-wrap: wrap;
+        margin: 30px;
+        font-size: 42px;
+      }
+    }
+    
+    .hero-info {
+      display: flex;
+      flex-direction: column; 
+      text-align: center;
+      margin-top: -110px;
+      font-size: 18px;
+
+      & h4 {
+      color: #fefbfc;
+      font-weight: 300;
+      }
+      
+      & a {
+        color: #ffffff;
+        font-weight: bold;
+      }
     }
   }
 }
