--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@ body .page-content a {
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: #d9d9d9;
 }
 .hero .navbar {
   display: flex;
@@ -42,7 +43,7 @@ body .page-content a {
 }
 .hero .hero-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
 }
 .hero .hero-content .background-image {
@@ -71,18 +72,48 @@ body .page-content a {
 }
 .hero .hero-content .hestia-content {
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   position: absolute;
   margin: 20% 0 0 40%;
+}
+.hero .hero-content .hero-title {
+  display: flex;
+  justify-content: center;
+  padding: 80px;
+  color: #ffffff;
+  background-color: #cf2e78;
+}
+.hero .hero-content .hero-title h1 {
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  margin: 30px;
+  font-size: 42px;
+}
+.hero .hero-content .hero-info {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: -110px;
+  font-size: 18px;
+}
+.hero .hero-content .hero-info h4 {
+  color: #fefbfc;
+  font-weight: 300;
+}
+.hero .hero-content .hero-info a {
+  color: #ffffff;
+  font-weight: bold;
 }
 
 .main {
   display: flex;
+  flex-direction: column;
   width: 100%;
   background-color: #d9d9d9;
   margin-top: -5px;
-  justify-content: center;
+  align-items: center;
 }
 .main .wrap-around {
   display: flex;
@@ -204,6 +235,68 @@ body .page-content a {
   font-size: 18px;
   margin-left: 33px;
   color: #c6c6c6;
+}
+.main .wrap-around .blog-wrap {
+  display: flex;
+  flex-direction: column;
+}
+.main .wrap-around .blog-wrap .blog-container {
+  margin: 0 90px 30px 90px;
+  padding: 0 15px;
+}
+.main .wrap-around .blog-wrap .blog-container .category-container h6 {
+  color: #89229b;
+}
+.main .wrap-around .blog-wrap .blog-container .blog-title h1 {
+  color: #3c4858;
+}
+.main .wrap-around .blog-wrap .blog-container .blog-description p {
+  color: #b8b8b8;
+}
+.main .wrap-around .blog-wrap .blog-container .blog-description p a {
+  color: #4d7294;
+}
+.main .wrap-around .blog-wrap .blog-container .blog-about {
+  color: #5b6572;
+}
+.main .wrap-around .blog-wrap .blog-container .blog-about a {
+  font-weight: bold;
+  color: #3c4858;
+}
+.main .wrap-around .blog-post-wrap {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+}
+.main .wrap-around .blog-post-wrap .description-and-media .categories-and-media .media {
+  text-align: end;
+  justify-content: flex-start;
+}
+.main .wrap-around .blog-post-wrap .description-and-media .categories-and-media .media i {
+  font-size: 32px;
+}
+.main .related-posts {
+  display: flex;
+  flex-direction: column;
+}
+.main .related-posts h2 {
+  text-align: center;
+  font-size: 37px;
+}
+.main .related-posts .blog-posts {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  padding: 50px 100px;
+}
+.main .related-posts .blog-posts .post-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  border-radius: 6px;
+  background-color: #ffffff;
+  margin: 2.5%;
+  padding: 15px 15px;
 }
 
 .footer {
