--- a/styles/hero/hero.css
+++ b/styles/hero/hero.css
@@ -14,6 +14,9 @@
 .hero .navbar .home-button {
   width: 100%;
 }
+.hero .navbar .home-button :hover {
+  color: #677893;
+}
 .hero .navbar .right-navbar {
   display: flex;
   align-items: center;
