--- a/styles/media/media.css
+++ b/styles/media/media.css
@@ -1,5 +1,6 @@
-@media (max-width: 600px) {
+@media (max-width: 983px) {
   .page-content .hero .navbar .right-navbar {
-    margin-left: 20%;
+    margin-left: 0;
+    justify-content: end;
   }
 }/*# sourceMappingURL=media.css.map */
